# xxx-ica-nlp-llm-project

./: README.md
container-document-layout-segmentation/: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cmds  microservice.yaml  pyproject.toml
container-document-layout-segmentation/.azuredevops/: pull_request_template.md
container-document-layout-segmentation/.github/workflows/: code-analysis.yml
container-document-layout-segmentation/azure_pipelines/: ci-dev.yml
container-document-layout-segmentation/document_layout_segmentation_service/: segmentation.py
container-document-layout-segmentation/document_layout_segmentation_service/utils/: filesystem.py  logger.py
container-document-layout-segmentation/microservices/: Dockerfile  docker-compose.yaml  requirements.in  requirements.txt
container-document-layout-segmentation/microservices/scripts/: entry.sh
container-document-layout-segmentation/models/paddleclas/inference_model/PULC/text_image_orientation/: inference.pdiparams  inference.pdmodel
container-document-layout-segmentation/models/paddleocr/whl/layout/picodet_lcnet_x1_0_fgd_layout_cdla_infer/: inference.pdmodel
container-document-layout-segmentation/models/paddleocr/whl/layout/picodet_lcnet_x1_0_fgd_layout_infer/: inference.pdmodel
container-document-layout-segmentation/models/paddleocr/whl/table/ch_ppstructure_mobile_v2.0_SLANet_infer/: inference.pdiparams  inference.pdmodel
container-document-layout-segmentation/models/paddleocr/whl/table/en_ppstructure_mobile_v2.0_SLANet_infer/: inference.pdiparams  inference.pdmodel
container-document-layout-segmentation/scripts/: code_check.sh
container-document-layout-segmentation/tests/: test_sample.py
(+97 files in other folders)
