[tool.poetry]
name = "container-document-layout-segmentation"
version = "0.0.1"
description = "Microservice for Document layout segmentation"
authors = ["KIT"]
license = "COPYRIGHT 2023 KPMG Ignition Tokyo"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
paddlepaddle = "^2.4.0"
paddleocr = ">=2.6.0.3"
paddleclas = ">=2.4.3"
pymupdf = "1.18.0"
numpy = "1.23.5"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.4"
black = "^22.3.0"
flake8 = "^3.9.2"
mypy = "^0.942"
pytest-cov = "^2.12.0"
pre-commit = "^2.13.0"
pyproject-flake8 = "^0.0.1a3"
isort = "^5.10.1"
ipython = "^8.2.0"
types-requests = "^2.27.16"
Sphinx = "^4.5.0"
sphinx-autobuild = "^2021.3.14"
nbsphinx = "^0.8.8"
#pydata-sphinx-theme = "^0.8.1"
nbconvert = "^6.4.5"
myst-parser = "^0.17.0"
sphinxcontrib-svg2pdfconverter = "^1.2.0"
types-PyYAML = "^6.0.7"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist)/'''
skip-string-normalization = true

[tool.flake8]
max-line-length=80
max-complexity=20
ignore="W503, E203"
exclude = "__init__.py"
per-file-ignores = """"""
inline-quotes = '"'

[tool.mypy]
python_version = 3.9
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
filterwarnings = "error::UserWarning"
addopts = "tests"
testpaths = ["tests"]

[tool.isort]
profile = "black"
line_length = 80
